--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/react-native-vector-icons": "^6.4.18",
     "axios": "^1.6.7",
     "formik": "^2.4.5",
+    "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-native": "0.73.3",
     "react-native-autocomplete-dropdown": "^3.1.3",
@@ -32,7 +33,7 @@
     "react-native-keychain": "^8.1.2",
     "react-native-mmkv": "^2.11.0",
     "react-native-modal": "^13.0.1",
-    "react-native-reanimated": "^3.6.2",
+    "react-native-reanimated": "^3.9.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-svg": "^14.1.0",
@@ -52,10 +53,12 @@
     "@react-native/eslint-config": "0.73.2",
     "@react-native/metro-config": "0.73.4",
     "@react-native/typescript-config": "0.73.1",
+    "@types/lodash": "^4.17.0",
     "@types/react": "^18.2.55",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
